Fix Safari alignment issues

--- a/assets/scss/_funding.scss
+++ b/assets/scss/_funding.scss
@@ -26,7 +26,7 @@
     }
 
     li:nth-child(odd) {
-      align-items: end;
+      align-items: flex-end;
       text-align: right;
 
       &.active {
